# omegaUp-cli

./: LICENSE  README.md  main.py  mypy.ini  pyproject.toml
commands/add/: add.py
commands/add/interactive/: interactive.py  template.py
commands/add/invalidcase/: invalidcase.py  template.py
commands/add/solution/: solution.py  template.py
commands/add/testvalidator/: template.py  testvalidator.py
commands/new/: new.py
commands/new/problem/: problem.py  template.py
core/: interactive.py  logging.py  problems_json.py  repository.py  settings_json.py  subtasks.py  tests_json.py
scripts/: lint.sh
