[tool.poetry]
name = "omegaup-cli"
version = "0.1.0"
description = "cli for creating omegaUp problems"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
black = "^23.9.1"
ruff = "^0.0.278"
